# Sfogliatella

./: .dockerignore  .gitignore  GOAL.md  HPO_Sample.py  MASTER_GUIDANCE.md  README.md  eval.py  hpo.py  live.py  pack.py  predict.py  pyproject.toml  requirements.txt  smoke_test.sh  stack.py  train.py  unpack.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-pypi.yml
docker/: Dockerfile  compose.yaml
docs/: variable_map.md
docs/core/: ACTIVITY_SUMMARY.md  GOAL.md  KNOWLEDGE_BASE.md  MASTER_GUIDANCE.ja.md  MASTER_GUIDANCE.md  STATE.yaml  TASK_INDEX.md
docs/core/DECISIONS/: ADR-001-classification-output-shape.md
docs/implemented/: TASK-20260301-003-fx-subset-all-models-validation.md  TASK-20260301-004-gpu-container-fix-and-kaggle-full-validation.md  TASK-20260302-002-gap-fill-timesfm-custom-smoke.md
scripts/: print_banner.sh  tk_common.sh  tk_ensure_docker.sh  tk_start_claude.sh  tk_start_codex.sh
sfogliatella/: __init__.py  api.py
sfogliatella/cli/: args.py  banner.py  hpo_cli.py  live_cli.py  predict_cli.py  stack_cli.py  train_cli.py
sfogliatella/core/: data.py  eval.py  trainer.py  utils.py
sfogliatella/devices/: device.py
sfogliatella/hpo/: __init__.py  solver.py
sfogliatella/io/: checkpoint.py  metadata.py  pack.py
sfogliatella/losses/: __init__.py  classification.py  loader.py  regression.py
sfogliatella/models/: base.py  cnn.py  lstm.py  mlp.py  rnn.py  timesfm_model.py  transformer.py  xgboost_model.py
sfogliatella/registry/: __init__.py  registry.py
sfogliatella/stacking/: __init__.py  pipeline.py
